--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <head>
     <style>
         body{
-            background-image: url('background.png');
+            background-image: url('Background.png');
             background-repeat: repeat;
             margin: 2em;
         }
