Add message and info about Clibboard copy

--- a/Squad.html
+++ b/Squad.html
@@ -153,6 +153,7 @@
 
       function copyText(control) {
           copyTextToClipboard(control.text ?? control.innerText);
+          alert('Squad text copied to the clipboard.');
       }
   </script>
 </head>
