--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <li>specify the formation of the 10 outfield players in the f parameter (e.g. f=442)</li>
             <li>specify the list of players in the p parameter. The players should be listed goalkeeper to attackers and left to right (e.g. gk,lb,cb,cb,rb,lw,m,m,rw,s,s)</li>
         </ul>
+        <p>You can click on the text layout to copy to the clipboard, or click on the headings to edit the team.</p>
 
         <p>Alternatively you can use this page to choose a formation and enter the players names.</p>
     </div>
